test/error/ExprList.ci
public static class Test
{
	public static bool Run()
	{
		int i = List<int>(); //ERROR: Expected a method
	}
}
